General outline for webpage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
         <h1> Tic Tac Toe </h1>
         <button typ="button" id="reset">Reset</button>
     </header>
+    <div class="message">Player X Turn</div>
+    <div class="game">
+        <div class="player-info">
+            <div id="player-1" class="player">Player 1 Score</div>
+            <div id="player-1-score">lolo</div>
+        </div>
+        <div class="gameboard">
+            <div class="field" data-index="0"></div>
+            <div class="field" data-index="1"></div>
+            <div class="field" data-index="2"></div>
+            <div class="field" data-index="3"></div>
+            <div class="field" data-index="4"></div>
+            <div class="field" data-index="5"></div>
+            <div class="field" data-index="6"></div>
+            <div class="field" data-index="7"></div>
+            <div class="field" data-index="8"></div>
+        </div>
+        <div class="player-info">
+            <div id="player-2" class="player">Player 2 Score</div>
+            <div id="player-2-score">lolo</div>
+        </div>
+    </div>
+    <button type="button" id="rematch">Rematch</button>
 </body>
 
 </html>
