--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="favicon.ico">
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
     <header>
         <h1> Tic Tac Toe </h1>
-        <button typ="button" id="reset">Reset</button>
+        <button type="button" id="reset">Reset</button>
     </header>
     <div class="message">Player X Turn</div>
     <div class="game">
