Changed message to ID instead of class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1> Tic Tac Toe </h1>
         <button type="button" id="reset">Reset</button>
     </header>
-    <div class="message">Player X Turn</div>
+    <div id="message">Player X Turn</div>
     <div class="game">
         <div class="player-info">
             <div id="player-1" class="player">Player 1 Score</div>
