Design for implementing username interface

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     </header>
     <div id="message">Player X Turn</div>
     <div class="game">
+        <div class="formholder">
+            <form class="playerForm">
+                <label for="playerx" class="formLabel">Player X Name</label>
+                <input type="text" class="formInput" id="playerx" name="player-x" placeholder="Player X">
+                <label for="playero" class="formLabel">Player O Name</label>
+                <input type="text" class="formInput" id="playero" name="player-o" placeholder="Player O">
+            </form>
+            <button type="button" id="start">Start</button>
+        </div>
         <div class="player-info">
             <div id="player-1" class="player">Player 1 Score</div>
             <div id="player-1-score">lolo</div>
