Changed initialized values for player names

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <button type="button" id="start">Start</button>
         </div>
         <div class="player-info">
-            <div id="player-1" class="player">Player 1 Score</div>
-            <div id="player-1-score">lolo</div>
+            <div id="player-1" class="player">Player X Score</div>
+            <div id="player-1-score">0</div>
         </div>
         <div class="gameboard">
             <div class="field" data-index="0"></div>
@@ -43,8 +43,8 @@
             <div class="field" data-index="8"></div>
         </div>
         <div class="player-info">
-            <div id="player-2" class="player">Player 2 Score</div>
-            <div id="player-2-score">lolo</div>
+            <div id="player-2" class="player">Player O Score</div>
+            <div id="player-2-score">0</div>
         </div>
     </div>
     <button type="button" id="rematch">Rematch</button>
